[package]
name = "nessie-parse"
version = "0.1.5"
edition = "2021"
authors = ["Jonathan Reicher"]
description = "A parser library for easily combining parsers together"
license = "MIT"
repository = "https://github.com/yonatan-reicher/nessie-parse"

[dependencies]
indoc = "2"
functionality = "1"
derive_more = { version = "2.0.1", features = ["from"] }
